fixed spacing issues

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -61,6 +61,10 @@ blockquote {
   font-style: italic;
 }
 
+#homepage-image {
+  margin-bottom: 20px;
+}
+
 /* =Header */
 .main-background-image {
   max-width: 100%;
@@ -101,6 +105,7 @@ blockquote {
 
  #home-subtitle {
    font-size: .35em;
+   margin-bottom: 20px;
  }
 
 .wrapper {
@@ -111,7 +116,8 @@ blockquote {
 }
 
 #blog-wrapper {
-  margin: 70px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .header {
@@ -199,6 +205,8 @@ blockquote {
   text-align: center;
   margin-left: 100px;
   margin-right: 100px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 
 }
 
@@ -240,7 +248,6 @@ blockquote {
 }
 
 .post-title {
-    margin-bottom: 110px;
     margin-top: 125px;
 }
 
@@ -254,6 +261,7 @@ blockquote {
 .post-title__subtitle {
     font-size: 20px;
     margin-top: 10px;
+    margin-bottom: 20px;
     font-family: 'Merriweather', serif;
     font-style: italic;
 }
@@ -457,7 +465,6 @@ blockquote {
     .page-title__subtitle {
         font-size: 30px;
         line-height: normal;
-        margin-top: 20px;
     }
 
     .blog-item-box {
@@ -483,7 +490,7 @@ blockquote {
     }
 
     .post-title__text {
-        font-size: 28px;
+        font-size: 40px;
     }
 
     .post-title__subtitle {
