--- a/files/css/style.css
+++ b/files/css/style.css
@@ -351,7 +351,7 @@ h1 {
 
     font-size: 100px;
 
-    line-height: 130px
+    line-height: 60px
 
 }
 
